# Terminis

./: .gitignore  LICENSE  README.md  pyproject.toml  terminis.py
terminis/: __main__.py  music.sh  terminis.py
terminis/pytetris/: __init__.py  core.py
